tests/errors/ref_in_variable.milo
// @error: cannot store a reference in variable
fn main(): i32 {
    let x: i32 = 5
    let r: &i32 = x
    return 0
}
